# starlette-lego

./: LICENSE  README.md  pyproject.toml
docs/source/: conf.py  index.rst
starlette_lego/: __init__.py
